Added Restaurant, Catering, and Location/Hour info

--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
 <!doctype html>
 <html>
 <head>
-	<img src="blackgoose.png"> <title> Black Goose Bistro </title>
+	<img src="Images/blackgoose.png"> <!--Added Restaurant Logo--><title> Black Goose Bistro </title> <!--Added Title-->
 </head>
 <hr>
 <body>
 <h1> The Restaurant</h1>
-<p1> The Black Goose Bistro offers casual lunch and dinnr fare in a hip atmosphere. The Menu changes regularly to highlight the freshest ingredients. </p1>
+<p> The Black Goose Bistro offers casual lunch and dinnr fare in a hip atmosphere. The Menu changes regularly to highlight the freshest ingredients. </p> <!--Restaurant Info-->
 <h1> Catering</h1>
-<p1> The Black Goose Bistro offers casual lunch and dinnr fare in a hip atmosphere. The Menu changes regularly to highlight the freshest ingredients. </p1>
-
+<p> The Black Goose Bistro offers casual lunch and dinnr fare in a hip atmosphere. The Menu changes regularly to highlight the freshest ingredients. </p><!--Catering Info-->
+<h1> Location and Hours</h1>
+<p> Seekonk, Massachusetts; 
+<ul> <li> Monday through Thursday, 11am-9pm</li>
+<li>Friday and Saturday, 11am-midnight </li>
+<li>Closed Sunday</li> </p> <!--Location and Hours Info-->
 </body>
+
+
 </html>
