Add Images Folder

--- a/index.html
+++ b/index.html
@@ -1,20 +1,27 @@
 <!doctype html>
 <html>
 <head>
-	<img src="Images/blackgoose.png"> <!--Added Restaurant Logo--><title> Black Goose Bistro </title> <!--Added Title-->
+	 <title> Black Goose Bistro </title> <!--Added Title-->
 </head>
+<h1><img src="Images/blackgoose.png" alt="Black Goose Logo"> <!--Added Restaurant Logo--> Black Goose Bistro </h1>
 <hr>
 <body>
-<h1> The Restaurant</h1>
-<p> The Black Goose Bistro offers casual lunch and dinnr fare in a hip atmosphere. The Menu changes regularly to highlight the freshest ingredients. </p> <!--Restaurant Info-->
-<h1> Catering</h1>
-<p> The Black Goose Bistro offers casual lunch and dinnr fare in a hip atmosphere. The Menu changes regularly to highlight the freshest ingredients. </p><!--Catering Info-->
-<h1> Location and Hours</h1>
-<p> Seekonk, Massachusetts; 
-<ul> <li> Monday through Thursday, 11am-9pm</li>
-<li>Friday and Saturday, 11am-midnight </li>
-<li>Closed Sunday</li> </p> <!--Location and Hours Info-->
+<!--Restaurant Info-->
+<h2> The Restaurant</h2>
+<p> The Black Goose Bistro offers casual lunch and dinnr fare in a hip atmosphere. The Menu changes regularly to highlight the freshest ingredients. </p> 
+<!--Catering Info-->
+<h2> Catering</h2>
+<p> The Black Goose Bistro offers casual lunch and dinnr fare in a hip atmosphere. The Menu changes regularly to highlight the freshest ingredients. </p>
+<!--Location and Hours Info-->
+<h2> Location and Hours</h2>
+<p> Seekonk, Massachusetts; </p>
+<ul> 
+	<li> Monday through Thursday, 11am-9pm</li>
+	<li>Friday and Saturday, 11am-midnight </li>
+	<li>Closed Sunday</li> 
+ </ul>
 </body>
 
-
+<p> <a href="http://www.grc.calpoly.edu/"> Jen's Kithcen </a> </p>
+<p> <a href="#top"> Go to the top of the page </a> </p>
 </html>
