--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
  </ul>
 </body>
 
+<!--Links to Jan's Kitchen and Top of page-->
 <p> <a href="http://www.grc.calpoly.edu/"> Jen's Kithcen </a> </p>
 <p> <a href="#top"> Go to the top of the page </a> </p>
 </html>
