Fixed Catering Sentence and added Italics

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <p> The Black Goose Bistro offers casual lunch and dinnr fare in a hip atmosphere. The Menu changes regularly to highlight the freshest ingredients. </p> 
 <!--Catering Info-->
 <h2> Catering</h2>
-<p> The Black Goose Bistro offers casual lunch and dinnr fare in a hip atmosphere. The Menu changes regularly to highlight the freshest ingredients. </p>
+<p> You have fun... <em> we'll handle the cooking. </em> Blakc Goose Catering can handle events from snacks for bridge club to elegant corporate fundraisers.</p>
 <!--Location and Hours Info-->
 <h2> Location and Hours</h2>
 <p> Seekonk, Massachusetts; </p>
