--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 <body>
 <!--Restaurant Info-->
 <h2> The Restaurant</h2>
-<p> The Black Goose Bistro offers casual lunch and dinnr fare in a hip atmosphere. The Menu changes regularly to highlight the freshest ingredients. </p> 
+<p> The Black Goose Bistro offers casual lunch and dinner fare in a hip atmosphere. The menu changes regularly to highlight the freshest ingredients. </p> 
 <!--Catering Info-->
 <h2> Catering</h2>
-<p> You have fun... <em> we'll handle the cooking. </em> Blakc Goose Catering can handle events from snacks for bridge club to elegant corporate fundraisers.</p>
+<p> You have fun... <em> we'll handle the cooking. </em> Black Goose Catering can handle events from snacks for bridge club to elegant corporate fundraisers.</p>
 <!--Location and Hours Info-->
 <h2> Location and Hours</h2>
 <p> Seekonk, Massachusetts; </p>
@@ -23,6 +23,6 @@
 </body>
 
 <!--Links to Jan's Kitchen and Top of page-->
-<p> <a href="http://www.grc.calpoly.edu/"> Jen's Kithcen </a> </p>
+<p> <a href="http://www.grc.calpoly.edu/"> Jen's Kitchen </a> </p>
 <p> <a href="#top"> Go to the top of the page </a> </p>
 </html>
